--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>#UT-Insta dataset</title>
+    <meta charset="utf-8">
+    <style>
+        body {
+            font-family: "Roboto Flex", sans-serif;
+            direction: ltr;
+            line-height: 1.2em;
+        }
 
+        h1 {
+            font-size: 36px;
+            margin-top: 36px;
+            margin-bottom: 36px;
+            font-weight: 300;
+        }
+
+        .content {
+            max-width: 700px;
+            margin: 0 auto;
+            margin-bottom: 64px;
+        }
+
+        .text {
+            text-align: left;
+            font-size: 14px;
+        }
+
+        h2 {
+            font-size: 18px;
+            font-weight: 700;
+            margin-top: 36px;
+            margin-bottom: 12px;
+        }
+
+        ul li {
+            margin-bottom: 4px;
+        }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    
+</head>
+<body>
+    <div class="content">
+        <h1>#UT-Insta</h1>
+        <div class="text">
+            <p><i>#UT-Insta</i> is a large-scale dataset consisting of more than 3 million images and their corresponding captions, collected from Instagram public profiles.</p>
+            <p>The dataset consists of two parts: One predominantly in English and the other in Persian.</p>
+        </div>
+
+        <h2>Dataset statistics</h2>
+        <div class="text">
+            <p>Coming soon...</p>
+        </div>
+
+        <h2>Explore dataset</h2>
+        <div class="text">
+            <p>Explore the dataset by selecting one of the following options:</p>
+            <ul>
+                <li><a href="/en.demo100/html/page_0000.html">English - 100</a></li>
+                <li><a href="/fa.demo100/html/page_0000.html">Persian - 100</a></li>
+            </ul>
+        </div>
+
+        <h2>Data privacy</h2>
+        <div class="text">
+            <p>The dataset does not contain usernames or profile pictures of the Instagram users. The images and captions are collected from public profiles only and are available to anyone on Instagram.</p>
+            <p>We also made efforts to remove username mentions, phone numbers, and email addresses from the captions.</p>
+            <p>If you have any concerns, please contact us at <a href="mailto:utinsta@ghiasi.dev">utinsta@ghiasi.dev</a>.</p>
+        </div>
+
+        <h2>Citation</h2>
+        <div class="text">
+            <p>If you use this dataset in your research, please cite the following paper:</p>
+            <code>
+                Coming soon...
+            </code>
+        </div>
+
+        <h2>License</h2>
+        <div class="text">
+            <p><i>#UT-Insta</i> is available to use for non-commercial research purposes <b>only</b>.</p>
+            <p>You must agree to the following terms and conditions:</p>
+            <ul style="font-size: 12px;">
+                <li>Researcher shall use the Database only for non-commercial research and educational purposes.</li>
+                <li>Authors and University of Tehran makes no representations or warranties regarding the Database, including but not limited to warranties of non-infringement or fitness for a particular purpose.</li>
+                <li>Researcher accepts full responsibility for his or her use of the Database and shall defend and indemnify the #UT-Insta team and University of Tehran, against any and all claims arising from Researcher's use of the Database, including but not limited to Researcher's use of any copies of copyrighted images that he or she may create from the Database.</li>
+                <li>Researcher may provide research associates and colleagues with access to the Database provided that they first agree to be bound by these terms and conditions.</li>
+                <li>If Researcher is employed by a for-profit, commercial entity, Researcher's employer shall also be bound by these terms and conditions, and Researcher hereby represents that he or she is fully authorized to enter into this agreement on behalf of such employer.</li>
+            </ul>
+            <p>For any questions, please contact <a href="mailto:utinsta@ghiasi.dev">utinsta@ghiasi.dev</a>.</p>
+        </div>
+
+        <h2>Download dataset</h2>
+        <div class="text">
+            <p>Coming soon...</p>
+        </div>
+    </div>
+</body>
+</html>
