update home page with download links

--- a/index.html
+++ b/index.html
@@ -96,7 +96,20 @@
 
         <h2>Download dataset</h2>
         <div class="text">
-            <p>Coming soon...</p>
+            <p>English dataset is available in three variants:</p>
+            <ul>
+                <li><a href="http://94.101.179.91/dataset/en-40k/">English - 40k</a>: Contains 40,000 images</li>
+                <li><a href="http://94.101.179.91/dataset/en-100k/">English - 100k</a>: Contains 100,000 images</li>
+                <li><a href="http://94.101.179.91/dataset/en-full/">English - Full</a>: Contains more than 1,000,000 images</li>
+            </ul>
+            <p></p>
+            <p>Persian dataset is available in two variants:</p>
+            <ul>
+                <li><a href="http://94.101.179.91/dataset/fa-40k/">Persian - 40k</a>: Contains 40,000 images</li>
+                <li><a href="http://94.101.179.91/dataset/fa-full/">Persian - Full</a>: Contains more than 2,000,000 images</li>
+            </ul>
+            <p></p>
+            <p>In all of the links above, images are available in a tar file and relevant captions and hashtags are available in a gzipped json file.</p>
         </div>
     </div>
 </body>
